2006-03-30  Michael Natterer  <mitch@gimp.org>

	* app/pdb/procedural_db.h (structs Argument and ProcArg): renamed
	member "arg_type" to "type".

	* app/pdb/procedural_db.c
	* app/pdb/procedural-db-query.c
	* app/actions/plug-in-commands.c
	* app/core/gimppdbprogress.c
	* app/plug-in/plug-in-params.c
	* app/plug-in/plug-in-progress.c
	* app/plug-in/plug-in-rc.c
	* tools/pdbgen/pdb/fileops.pdb
	* tools/pdbgen/pdb/procedural_db.pdb: changed accordingly.

	* app/pdb/fileops_cmds.c
	* app/pdb/procedural_db_cmds.c: regenerated.

2006-03-30  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c (siox_foreground_extract): actually increment
	the tile counter used to limit the number of progress updates.

2006-03-30  Michael Natterer  <mitch@gimp.org>

	* app/pdb/procedural_db.c (procedural_db_free_entry): also
	unref the ProcRecord's GParamSpecs.

2006-03-30  Sven Neumann  <sven@gimp.org>

	* app/core/gimpparamspecs.c (gimp_param_parasite_validate): return
	FALSE in case of a valid parasite.

2006-03-30  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpwire.c (gimp_wire_read, gimp_wire_write):
	sprinkled a few G_UNLIKELY() macros to help the compiler.

2006-03-30  Sven Neumann  <sven@gimp.org>

	* app/pdb/procedural_db.c (procedural_db_free_entry): actually
	free the memory allocated for the procedure entry.

2006-03-30  Michael Natterer  <mitch@gimp.org>

	* app/pdb/procedural_db.[ch] (struct Argument): replace the value
	union by a GValue.

	(procedural_db_argument_init)
	(procedural_db_compat_arg_init): new functions to initialize
	an Argument. They call g_value_init() on the Argument's value.

	(procedural_db_arguments)
	(procedural_db_return_values): initialize the returned Argument
	arrays so their GValues are ready to use. Allow to get the
	(unsuccessful) return values of a NULL ProcRecord.

	(procedural_db_destroy_args): g_value_unset() the values. Added a
	"gboolean full_destroy" parameter. Its only effect is to destroy