@@ -26,6 +26,16 @@
 #include <langinfo.h>
 #endif
 
+#include <sys/types.h>
+
+#ifdef HAVE_UNISTD_H
+#include <unistd.h>
+#endif
+
+#ifdef G_OS_WIN32
+#include <process.h>
+#endif
+
 #include <glib-object.h>
 #include <gobject/gvaluecollector.h>
 
@@ -34,6 +44,9 @@
 
 #include "core-types.h"
 
+#include "config/gimpbaseconfig.c"
+
+#include "gimp.h"
 #include "gimp-utils.h"
 
 
@@ -325,4 +338,34 @@ gimp_parameters_free (GParameter *params,
 
       g_free (params);
     }
+}
+
+gchar *
+gimp_get_temp_filename (Gimp        *gimp,
+                        const gchar *extension)
+{
+  static gint  id = 0;
+  static gint  pid;
+  gchar       *filename;
+  gchar       *basename;
+  gchar       *path;
+
+  g_return_val_if_fail (GIMP_IS_GIMP (gimp), NULL);
+  g_return_val_if_fail (extension != NULL, NULL);
+
+  if (id == 0)
+    pid = getpid ();
+
+  basename = g_strdup_printf ("gimp-temp-%d%d.%s",
+                              pid, id++, extension);
+
+  path = gimp_config_path_expand (GIMP_BASE_CONFIG (gimp->config)->temp_path,
+                                  TRUE, NULL);
+
+  filename = g_build_filename (path, basename, NULL);
+
+  g_free (path);
+  g_free (basename);
+
+  return filename;
 }
